--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h2>Click here</h2><br>
 
     <!-- Trigger/Open The Modal -->
-    <button id="myBtn">Open Modal</button>
+    <button id="myBtn">Add Task</button>
 
     <div class="main_body">
         <div id="myModal" class="modal">
