--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
 
 </head>
 <body>
-    <h2>Click here</h2><br>
+    <div class="modal_opener">
+        <h2>Click here</h2><br>
 
-    <!-- Trigger/Open The Modal -->
-    <button id="myBtn">Add Task</button>
-
+        <!-- Trigger/Open The Modal -->
+        <button id="myBtn">Add Task</button>
+    </div>
     <div class="main_body">
         <div id="myModal" class="modal">
         <div class="modal-content">
