--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@ closeModalBtn.addEventListener('click', () => {
                 return;
             }
             if (dueDate.value.trim()==="" ){
-                messageDiv.innerHTML = '<h4>Please enter DMY</h4>';
+                messageDiv.innerHTML = '<h4>Please enter Due Date</h4>';
                 return;
             }
             if (Description.value.trim()==="" ){
-                messageDiv.innerHTML = '<h4>Please enter Description</h4>';
+                messageDiv.innerHTML = '<h4>Please enter Task Description</h4>';
                 return;
             }
             messageDiv.value=''
